[package]
name = "kueue"
version = "0.8.4"
authors = ["Florian Klemme <mail@florianklemme.de>"]
edition = "2021"
description = "A robust, user-level, work-stealing distributed task scheduler."
repository = "https://gitlab.kruecke.net/fklemme/kueue"
license = "MIT"

[[bin]]
name = "kueue"
path = "src/bin/kueue_client/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
console = "0.15"
directories = "4.0"
futures = "0.3"
gethostname = "0.3"
log = "0.4"
names = "0.14"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
simple_logger = "2.3"
ssh2 = "0.9"
sysinfo = "0.26"
terminal_size = "0.2"
tokio = { version = "1.21", features = ["full"] }
toml = "0.5"
