[package]
name = "kueue"
version = "0.19.0"
authors = ["Florian Klemme <mail@florianklemme.de>"]
edition = "2021"
description = "A robust, user-level, work-stealing, distributed task scheduler."
repository = "https://github.com/fklemme/kueue"
license = "MIT"
default-run = "kueue"

# The client crate is specifically renamed to "kueue"
# so that the executable is named "kueue" by default.
[[bin]]
name = "kueue"
path = "src/bin/kueue_client/main.rs"

# The library crate is renamed to "kueue_lib" to
# distinguish it from the "kueue" (client) binary crate.
[lib]
name = "kueue_lib"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
config = "0.13"
console = "0.15"
directories = "5.0"
futures = "0.3"
gethostname = "0.4"
log = "0.4"
names = "0.14"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
simple_logger = "4.2"
ssh2 = "0.9"
sysinfo = "0.29"
terminal_size = "0.3"
tokio = { version = "1.32", features = ["full"] }
toml = "0.8"
